# face_recog_video

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
raw_data/: README.md  rename.sh
src/: data_process.py  online_face_recog.cpp  simple_model_tester.cpp  train.cpp
